# reliafy

./: .gcloudignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
backend/: auth.py  config.py  db.py  degradation.py  fitting.py  main.py  recurrent.py  schema.py  storage.py
backend/routers/: admin.py  assistant.py  auth.py  billing.py  degradation.py  fleet.py  ingest.py  models.py  public.py  public_api.py  rbds.py  rcm.py  recurrent.py  reliability_agent.py  shares.py  strategy.py  teams.py  telemetry.py
backend/services/: access.py  assistant.py  billing.py  datasets.py  degradation.py  email.py  fleet.py  ingest.py  metrics.py  models.py  public_links.py  rbd_analysis.py  rbds.py  rcm.py  recurrent.py  reliability_agent.py  samples.py  shares.py  strategy.py  strategy_store.py  teams.py  tokens.py
backend/tests/: test_billing.py  test_config_endpoint.py  test_db_connection.py  test_degradation.py  test_discrete.py  test_fit_options.py  test_fitting.py  test_fleet.py  test_hardening.py  test_ingest.py  test_isolation.py  test_metrics.py  test_nonparametric.py  test_paste_dataset.py  test_per_demand.py  test_persistence.py  test_public_api.py  test_public_links.py  test_rbd_analysis.py  test_rcm.py  test_recurrent.py  test_reliability_agent.py  test_samples.py  test_sharing.py  test_strategy.py  test_teams.py
docs/: api.md
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js  vite.ssr.config.js
frontend/scripts/: prerender.mjs
frontend/src/: App.jsx  AppShell.jsx  AuthProvider.jsx  ConfigProvider.jsx  WorkspaceProvider.jsx  agent.js  (+15 more)
python/: README.md  pyproject.toml
python/reliafy/: __init__.py
(+140 files in other folders)
