[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name is reliafy-client (the bare `reliafy` name is taken on
# PyPI by an unrelated project); the import package stays `import reliafy`.
name = "reliafy-client"
version = "0.2.0"
description = "Push SurPyval models to Reliafy — shareable, trackable, citable reliability analyses."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Reliafy" }]
keywords = ["reliability", "survival-analysis", "weibull", "surpyval", "maintenance"]
dependencies = []          # stdlib only; SurPyval is optional (yours to fit with)

[project.urls]
Homepage = "https://reliafy.com"
Source = "https://github.com/Reliafy/reliafy"
Documentation = "https://github.com/Reliafy/reliafy/blob/main/python/README.md"

[tool.setuptools]
packages = ["reliafy"]
